Replace all titles in MDX by their sublevel

--- a/content/posts/2018-02-01-circular-references-php/post.mdx
+++ b/content/posts/2018-02-01-circular-references-php/post.mdx
@@ -6,7 +6,7 @@ slug: 'about-circular-references-in-php'
 
 Let me talk about some issues I encountered with circular references while working on my [PuPHPeteer](https://github.com/nesk/puphpeteer) library.
 
-## How you can end up with circular references
+# How you can end up with circular references
 
 Under the hood, PuPHPeteer uses [Rialto](https://github.com/nesk/rialto), a library I've created for the occasion. Rialto is a library to manage Node resources, therefore it needs to create a Node process and communicate with it. To do so, it has a `ProcessSupervisor` class which handles everything. In the early stage development, this class was handling way too much features.
 
@@ -18,38 +18,38 @@ However, the `DataUnserializer` class needed to keep a reference to its `Process
 
 And this is where we have an issue: if the root object is destroyed, the `ProcessSupervisor` and `DataUnserializer` instances will stay alive because they reference each other.
 
-## How circular references can be harmful
+# How circular references can be harmful
 
-Some languages can handle them pretty well, but since PHP's garbage collector is using [reference](https://www.php.net/manual/en/features.gc.refcounting-basics.php) [counting](https://en.wikipedia.org/wiki/Garbage_collection_(computer_science)#Reference_counting), the two instances will be destroyed only once PHP shuts down:
+Some languages can handle them pretty well, but since PHP's garbage collector is using [reference](https://www.php.net/manual/en/features.gc.refcounting-basics.php) [counting](<https://en.wikipedia.org/wiki/Garbage_collection_(computer_science)#Reference_counting>), the two instances will be destroyed only once PHP shuts down:
 
->Fortunately, PHP will clean up this data structure at the end of the request, but before then, this is taking up valuable space in memory.
+> Fortunately, PHP will clean up this data structure at the end of the request, but before then, this is taking up valuable space in memory.
 >
->– [php.net](https://www.php.net/manual/en/features.gc.refcounting-basics.php#features.gc.cleanup-problems)
+> – [php.net](https://www.php.net/manual/en/features.gc.refcounting-basics.php#features.gc.cleanup-problems)
 
 However, memory isn't the only issue here. Let me take another example with Rialto: the `ProcessSupervisor` uses the `__destruct` method to kill the Node process once the class is no longer used, and here's what the PHP documentation states:
 
->The destructor method will be called as soon as there are no other references to a particular object, or in any order during the shutdown sequence.
+> The destructor method will be called as soon as there are no other references to a particular object, or in any order during the shutdown sequence.
 >
->– [php.net](https://www.php.net/manual/en/language.oop5.decon.php#language.oop5.decon.destructor)
+> – [php.net](https://www.php.net/manual/en/language.oop5.decon.php#language.oop5.decon.destructor)
 
 This means the Node process will be kept alive until PHP shuts down because there will still exist a reference to the `ProcessSupervisor` instance.
 
 So, having a circular dependency in PHP can be harmful for two reasons:
 
-- **Memory allocation**: if your instances store large chunks of data (arrays with thousands of very long strings, etc…).
-- **Destruction**: if your instances needs to do some cleanup on destruction, the cleanup will only happen on PHP shutdown.
+-   **Memory allocation**: if your instances store large chunks of data (arrays with thousands of very long strings, etc…).
+-   **Destruction**: if your instances needs to do some cleanup on destruction, the cleanup will only happen on PHP shutdown.
 
 Ultimately, these issues will bother you essentially with long running processes, but even with simple web requests there could some side effects if your classes allocates a high volume of memory or needs to do proper cleaning at the right time.
 
-## How you can solve circular references
+# How you can solve circular references
 
 You have three ways to solve your circular references issues:
 
-- **Use [weak references](https://en.wikipedia.org/wiki/Weak_reference)**:
+-   **Use [weak references](https://en.wikipedia.org/wiki/Weak_reference)**:
 
->A **weak reference** is a [reference](https://en.wikipedia.org/wiki/Reference_(computer_science)) that does not protect the referenced [object](https://en.wikipedia.org/wiki/Object_(computer_science)) from collection by a [garbage collector](https://en.wikipedia.org/wiki/Garbage_collection_(computer_science)).
+> A **weak reference** is a [reference](<https://en.wikipedia.org/wiki/Reference_(computer_science)>) that does not protect the referenced [object](<https://en.wikipedia.org/wiki/Object_(computer_science)>) from collection by a [garbage collector](<https://en.wikipedia.org/wiki/Garbage_collection_(computer_science)>).
 >
->– [Wikipedia](https://en.wikipedia.org/wiki/Weak_reference)
+> – [Wikipedia](https://en.wikipedia.org/wiki/Weak_reference)
 
 Weak references is a missing language feature in PHP. You will need to use an extension. You can use either [WeakRef](https://github.com/colder/php-weakref) or [PHP Ref](https://github.com/pinepain/php-ref), I will use the first one below.
 
@@ -82,7 +82,7 @@ $instance = new ParentClass;
 unset($instance);
 ```
 
-- **Create a dereferencing method**:
+-   **Create a dereferencing method**:
 
 If you cannot install a PHP extension (because of a shared hosting, or whatever…), you can create a method to cleanup your circular references.
 
@@ -129,7 +129,7 @@ $instance->destroy();
 unset($instance);
 ```
 
-- **Change your code structure**:
+-   **Change your code structure**:
 
 If you don't want to add a derefencing method because you're creating a library and you want to keep the API really simple, you might want to change your code structure.
 
@@ -139,12 +139,12 @@ This is what I did with Rialto. I didn't want to put back the unserializing meth
 
 However, this is not always possible! I was able to do it here because Rialto used only one instance of the `DataUnserializer` class. If I had used multiple instances of this class (for… reasons), I could not have done that.
 
-## This could be way better
+# This could be way better
 
 PHP is a real mess when it comes to manage circular references. [A RFC was proposed](https://wiki.php.net/rfc/weakreferences) to add a SplWeakRef class to the standard PHP library, but it is marked as inactive…
 
 **Update**: [Weak references are coming](https://wiki.php.net/rfc/weakrefs) to PHP 7.4!
 
-In the other hand, not having weak references wouldn't be an issue if PHP's garbage collector used [the tracing algorithm](https://en.wikipedia.org/wiki/Garbage_collection_(computer_science)#Tracing), but instead we have that crappy reference counting…
+In the other hand, not having weak references wouldn't be an issue if PHP's garbage collector used [the tracing algorithm](<https://en.wikipedia.org/wiki/Garbage_collection_(computer_science)#Tracing>), but instead we have that crappy reference counting…
 
 If you encounter circular references in your code, two words: good luck!
