--- a/content/posts/2017-03-06-electron-heroku/post.mdx
+++ b/content/posts/2017-03-06-electron-heroku/post.mdx
@@ -4,13 +4,13 @@ date: '2017-03-06'
 slug: running-electron-on-heroku
 ---
 
->This article was written when only [the `Cedar-14` stack](https://devcenter.heroku.com/articles/cedar-14-stack) was available. I didn't try to run Electron on [the new `Heroku-16` stack](https://devcenter.heroku.com/articles/heroku-16-stack).
+> This article was written when only [the `Cedar-14` stack](https://devcenter.heroku.com/articles/cedar-14-stack) was available. I didn't try to run Electron on [the new `Heroku-16` stack](https://devcenter.heroku.com/articles/heroku-16-stack).
 
 These last days I've developed a module to scrap some data with [Nightmare](http://www.nightmarejs.org/), a headless browser based on [Electron](https://electron.atom.io/). Once my code was finished I tried to run it on [Heroku's infrastructure](https://www.heroku.com/home) and was pretty disappointed to see it wasn't running though it worked perfectly on my local machine.
 
 After a bit of research, I've found that “[Electron requires a display driver to function](https://github.com/electron/electron/blob/e315116/docs/tutorial/testing-on-headless-ci.md)”. Of course, Heroku doesn't provide any display driver since there is nearly no incentive to that. Thankfully, the Electron team addressed this issue (on the same documentation page) and recommends to use [Xvfb](https://www.x.org/archive/X11R7.6/doc/man/man1/Xvfb.1.xhtml), a tool which allows to run a virtual display server on your machine.
 
-## Installing Xvfb
+# Installing Xvfb
 
 You will need to add the [APT buildpack](https://github.com/heroku/heroku-buildpack-apt) to your app, which allows to install APT packages [at compile time](https://devcenter.heroku.com/articles/slug-compiler):
 
@@ -31,7 +31,7 @@ The next time you will deploy your application, Xvfb will be installed on your d
 heroku buildpacks:add -i 2 https://github.com/captain401/heroku-buildpack-xvfb
 ```
 
-## Running the virtual display server
+# Running the virtual display server
 
 Now you need to run Xvfb before launching your Electron process. Instead of starting a new instance of Xvfb each time you want to run Electron, you could launch Xvfb at startup. Heroku provides the ability to run a bash script on startup [through a `.profile` file](https://devcenter.heroku.com/articles/dynos#the-profile-file) located at the root directory of your app. Here is what it should contain:
 
@@ -42,7 +42,7 @@ Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
 
 These two lines are copied from [the configuration the Electron team provides for Travis CI](https://github.com/electron/electron/blob/e315116/docs/tutorial/testing-on-headless-ci.md#travis-ci). The `$DISPLAY` variable identifies your Xvfb instance and will be read by Electron, according to the documentation:
 
->Chromium in Electron will automatically look for `$DISPLAY`, so no further configuration of your app is required.
+> Chromium in Electron will automatically look for `$DISPLAY`, so no further configuration of your app is required.
 
 In the second line we run the Xvfb server in background and define the screen properties.
 
@@ -57,10 +57,10 @@ fi
 
 The `[ -z "$DYNO"]` part checks if the variable is unset or empty. I prefer to add this since Heroku states in its documentation:
 
->The `$DYNO` variable is experimental and subject to change or removal.
+> The `$DYNO` variable is experimental and subject to change or removal.
 
 Thus, if the `$DYNO` variable gets removed, your virtual display server will still be running, but on all your dynos instead on the type you defined.
 
-## It might be simpler in the future
+# It might be simpler in the future
 
 Since December, Chromium supports [the `--headless` command line flag](https://bugs.chromium.org/p/chromium/issues/detail?id=546953#c148) which allows to run it without any display server. I don't know if Electron will integrate this feature in the future, but this could be great for saving time for developers.
