--- a/content/posts/2018-06-26-android-database/post.mdx
+++ b/content/posts/2018-06-26-android-database/post.mdx
@@ -4,7 +4,7 @@ date: '2018-06-26'
 slug: ship-an-android-app-with-a-pre-populated-database
 ---
 
-I recently had to create an Android app with a pre-populated database containing containing more than 8,000 rows. Unfortunately, Android doesn't provide any API to do this easily. After searching for a few minutes, I found a blog post explaining [how to install a SQLite database from your assets to your app directory (by Juan-Manuel Fluxà)](https://blog.reigndesign.com/blog/using-your-own-sqlite-database-in-android-applications/), which helped me to create my own database helper.<!-- excerpt-end -->
+I recently had to create an Android app with a pre-populated database containing more than 8,000 rows. Unfortunately, Android doesn't provide any API to do this easily. After searching for a few minutes, I found a blog post explaining [how to install a SQLite database from your assets to your app directory (by Juan-Manuel Fluxà)](https://blog.reigndesign.com/blog/using-your-own-sqlite-database-in-android-applications/), which helped me to create my own database helper.<!-- excerpt-end -->
 
 However, this article is a bit outdated (it was written in 2009), the code could benefit from some optimizations, it doesn't handle database updates and it is written in Java (while I'm in love with Kotlin ❤️).
 
