Use new components in posts

--- a/content/posts/2017-03-06-electron-heroku/post.mdx
+++ b/content/posts/2017-03-06-electron-heroku/post.mdx
@@ -4,7 +4,11 @@ date: '2017-03-06'
 slug: running-electron-on-heroku
 ---
 
-> This article was written when only [the `Cedar-14` stack](https://devcenter.heroku.com/articles/cedar-14-stack) was available. I didn't try to run Electron on [the new `Heroku-16` stack](https://devcenter.heroku.com/articles/heroku-16-stack).
+<Warning>
+
+This article was written when only [the _Cedar-14_ stack](https://devcenter.heroku.com/articles/cedar-14-stack) was available. I didn't try to run Electron on [the new _Heroku-16_ stack](https://devcenter.heroku.com/articles/heroku-16-stack).
+
+</Warning>
 
 These last days I've developed a module to scrap some data with [Nightmare](http://www.nightmarejs.org/), a headless browser based on [Electron](https://electron.atom.io/). Once my code was finished I tried to run it on [Heroku's infrastructure](https://www.heroku.com/home) and was pretty disappointed to see it wasn't running though it worked perfectly on my local machine.
 
