--- a/content/posts/2018-01-16-laravel-default-error-page/post.mdx
+++ b/content/posts/2018-01-16-laravel-default-error-page/post.mdx
@@ -2,6 +2,7 @@
 title: 'Create a default error page with Laravel'
 date: '2018-01-16'
 slug: create-a-default-error-page-with-laravel
+featuredImage: images/featured.png
 ---
 
 Defining a [custom page for HTTP errors](https://laravel.com/docs/5.5/errors#custom-http-error-pages) is pretty easy with Laravel:
