Crop featured images to fit social network requirements

--- a/content/posts/2020-11-11-scriptable-widget/post.mdx
+++ b/content/posts/2020-11-11-scriptable-widget/post.mdx
@@ -3,6 +3,7 @@ title: Scriptable widgets are awesome
 date: 2020-11-11
 slug: scriptable-widgets-are-awesome
 featuredImage: images/featured.jpg # https://unsplash.com/photos/aWQsnHaITD8
+socialImageCrop: EAST
 ---
 
 When I switched from Android to iOS years ago, I missed some features… However, widgets were not part of them. They never brought anything to me, notifications and applications were enough because I don't really spend that much time on my homescreen.
