Fix image size in Scriptable blog post

--- a/content/posts/2020-11-11-scriptable-widget/post.mdx
+++ b/content/posts/2020-11-11-scriptable-widget/post.mdx
@@ -47,7 +47,11 @@ Here is a quote, from the README file, listing all the features of the widget:
 
 The hard part was the dark mode, I had no idea how to handle that because the [`Device.isUsingDarkAppearance()`](https://docs.scriptable.app/device/#isusingdarkappearance) method is not supported in widgets. I had to search for a solution with [WidgetKit](https://developer.apple.com/widgets/) to find [how to handle this](https://developer.apple.com/forums/thread/656457):
 
+<MaxWidth max={550}>
+
 [![A tweet of my own showing how to handle dark mode with dynamic colors in Scriptable](images/twitter.png)](https://twitter.com/johannpardanaud/status/1325376185908465666)
+
+</MaxWidth>
 
 The solution is as simple as writing:
 
