Set the quality of the PuPHPeteer featured image to 100

--- a/content/posts/2020-12-01-puphpeteer-v2/post.mdx
+++ b/content/posts/2020-12-01-puphpeteer-v2/post.mdx
@@ -3,6 +3,7 @@ title: PuPHPeteer is back!
 date: 2020-12-01
 slug: puphpeteer-is-back
 featuredImage: images/featured.webp
+featuredImageQuality: 100
 ---
 
 In 2018, I started my own company to create **extractr.io**, a product to allow non-technical users to scrap data from
