--- a/content/posts/2020-08-06-mocking-exception/post.mdx
+++ b/content/posts/2020-08-06-mocking-exception/post.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Mocking an exception in PHP'
-date: '2020-08-06'
+title: "Mocking an exception in PHP"
+date: "2020-08-06"
 slug: mocking-an-exception-in-php
 featuredImage: images/featured.jpg # https://unsplash.com/photos/KmKZV8pso-s
 ---
