--- a/content/posts/2017-03-06-electron-heroku/post.mdx
+++ b/content/posts/2017-03-06-electron-heroku/post.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Running Electron on Heroku'
-date: '2017-03-06'
+title: "Running Electron on Heroku"
+date: "2017-03-06"
 slug: running-electron-on-heroku
 featuredImage: images/featured.png
 ---
