--- a/content/posts/2021-01-18-jest-process-events/post.mdx
+++ b/content/posts/2021-01-18-jest-process-events/post.mdx
@@ -11,9 +11,9 @@ One of the "advanced" use cases is to assert if an exception is properly thrown 
 
 ```js
 function setMaximumExecutionTimeForNode(maxTime) {
-    setTimeout(() => {
-        throw new Error('Maximum execution time has been reached.')
-    }, maxTime)
+  setTimeout(() => {
+    throw new Error("Maximum execution time has been reached.")
+  }, maxTime)
 }
 ```
 
@@ -26,17 +26,17 @@ In this blog post, I'm mainly talking about the `uncaughtException` event, howev
 My first solution was to add a listener on the `uncaughtException` of the `process` variable and wait for it to be triggered:
 
 ```js
-test('exception is thrown when maximum execution time is reached', async () => {
-    // Resolve the promise once the error as been caught by the listener
-    const uncaughtErrorPromise = new Promise((resolve) => {
-        process.on('uncaughtException', resolve)
-    })
+test("exception is thrown when maximum execution time is reached", async () => {
+  // Resolve the promise once the error as been caught by the listener
+  const uncaughtErrorPromise = new Promise(resolve => {
+    process.on("uncaughtException", resolve)
+  })
 
-    // Set our maximum execution time to 0 to trigger as soon as possible
-    setMaximumExecutionTimeForNode(0)
+  // Set our maximum execution time to 0 to trigger as soon as possible
+  setMaximumExecutionTimeForNode(0)
 
-    // Expect our promise to resolve with the error
-    await expect(uncaughtErrorPromise).resolves.toBeInstanceOf(Error)
+  // Expect our promise to resolve with the error
+  await expect(uncaughtErrorPromise).resolves.toBeInstanceOf(Error)
 })
 ```
 
@@ -66,7 +66,7 @@ process._original = (function (_original) {
 })(process)
 
 // Run Jest
-require('jest/bin/jest')
+require("jest/bin/jest")
 ```
 
 Now, instead of running the `jest` command, we can make our file executable with `chmod +x .bin/jest` and run it directly in our terminal by typing `.bin/jest`. If you use NPM to run your tests, simply replace the jest command with the bootstrap file:
@@ -83,18 +83,18 @@ Now, instead of running the `jest` command, we can make our file executable with
 Finally, we can replace our usage of `process` by `process._original()`:
 
 ```js
-test('exception is thrown when maximum execution time is reached', async () => {
-    // Resolve the promise once the error as been caught by the listener
-    const uncaughtErrorPromise = new Promise((resolve) => {
-        // highlight-next-line
-        process._original().on('uncaughtException', resolve)
-    })
+test("exception is thrown when maximum execution time is reached", async () => {
+  // Resolve the promise once the error as been caught by the listener
+  const uncaughtErrorPromise = new Promise(resolve => {
+    // highlight-next-line
+    process._original().on("uncaughtException", resolve)
+  })
 
-    // Set our maximum execution time to 0 to trigger as soon as possible
-    setMaximumExecutionTimeForNode(0)
+  // Set our maximum execution time to 0 to trigger as soon as possible
+  setMaximumExecutionTimeForNode(0)
 
-    // Expect our promise to resolve with the error
-    await expect(uncaughtErrorPromise).resolves.toBeInstanceOf(Error)
+  // Expect our promise to resolve with the error
+  await expect(uncaughtErrorPromise).resolves.toBeInstanceOf(Error)
 })
 ```
 
@@ -104,31 +104,31 @@ However, when you run Jest, you can see the test fails in the same way as on our
 // Store the original listeners in an object containing
 // an array for each event we need to alter
 const originalJestListeners = {
-    uncaughtException: [],
-    unhandledRejection: [],
+  uncaughtException: [],
+  unhandledRejection: [],
 }
 
 // For each event, we retrieve the registered listeners, store them
 // in our global object and remove them from the event emitter.
 beforeEach(() => {
-    const originalProcess = process._original()
-    Object.keys(originalJestListeners).forEach((event) => {
-        originalProcess.listeners(event).forEach((listener) => {
-            originalJestListeners[event].push(listener)
-            originalProcess.off(event, listener)
-        })
+  const originalProcess = process._original()
+  Object.keys(originalJestListeners).forEach(event => {
+    originalProcess.listeners(event).forEach(listener => {
+      originalJestListeners[event].push(listener)
+      originalProcess.off(event, listener)
     })
+  })
 })
 
 // For each event, we retrieve the listeners stored in the global object
 // and we register them on the event emitter.
 afterEach(() => {
-    let listener
-    Object.keys(originalJestListeners).forEach((event) => {
-        while ((listener = originalJestListeners[event].pop()) !== undefined) {
-            process._original().on(event, listener)
-        }
-    })
+  let listener
+  Object.keys(originalJestListeners).forEach(event => {
+    while ((listener = originalJestListeners[event].pop()) !== undefined) {
+      process._original().on(event, listener)
+    }
+  })
 })
 ```
 
@@ -149,14 +149,14 @@ Never remove the default listeners in a _classic_ test, you will break the outpu
 In case you were wandering how to assert if a promise rejection was unhandled, it's pretty much the same:
 
 ```js
-test('promise is rejected', async () => {
-  const unhandledRejectionPromise = new Promise((resolve) => {
-    process._original().on('unhandledRejection', resolve)
+test("promise is rejected", async () => {
+  const unhandledRejectionPromise = new Promise(resolve => {
+    process._original().on("unhandledRejection", resolve)
   })
 
-  Promise.reject('test')
+  Promise.reject("test")
 
-  await expect(unhandledRejectionPromise).resolves.toBe('test')
+  await expect(unhandledRejectionPromise).resolves.toBe("test")
 })
 ```
 
