Reduce the height of the featured images

--- a/content/posts/2018-02-01-circular-references-php/post.mdx
+++ b/content/posts/2018-02-01-circular-references-php/post.mdx
@@ -2,7 +2,7 @@
 title: "About circular references in PHP"
 date: "2018-02-01"
 slug: "about-circular-references-in-php"
-featuredImage: images/featured.png
+featuredImage: images/featured.webp
 ---
 
 Let me talk about some issues I encountered with circular references while working on my [PuPHPeteer](https://github.com/nesk/puphpeteer) library.
