--- a/content/posts/2018-03-16-mapping-objects-javascript/post.mdx
+++ b/content/posts/2018-03-16-mapping-objects-javascript/post.mdx
@@ -2,7 +2,7 @@
 title: "Mapping objects in JavaScript"
 date: "2018-03-16"
 slug: mapping-objects-in-javascript
-featuredImage: images/featured.png
+featuredImage: images/featured.webp
 ---
 
 JavaScript has been evolving fast these last years, but object mapping is still a tricky part for beginners, especially if you don't want to mutate the original object.
