--- a/content/posts/2018-06-26-android-database/post.mdx
+++ b/content/posts/2018-06-26-android-database/post.mdx
@@ -2,7 +2,7 @@
 title: "Ship an Android app with a pre-populated database"
 date: "2018-06-26"
 slug: ship-an-android-app-with-a-pre-populated-database
-featuredImage: images/featured.png
+featuredImage: images/featured.webp
 ---
 
 I recently had to create an Android app with a pre-populated database containing more than 8,000 rows. Unfortunately, Android doesn't provide any API to do this easily. After searching for a few minutes, I found a blog post explaining [how to install a SQLite database from your assets to your app directory (by Juan-Manuel Fluxà)](https://blog.reigndesign.com/blog/using-your-own-sqlite-database-in-android-applications/), which helped me to create my own database helper.<!-- excerpt-end -->
