--- a/content/posts/2020-06-30-new-website/post.mdx
+++ b/content/posts/2020-06-30-new-website/post.mdx
@@ -2,7 +2,7 @@
 title: "nesk.dev v2"
 date: "2020-06-30"
 slug: nesk-dev-v2
-featuredImage: images/featured.jpg
+featuredImage: images/featured.webp
 ---
 
 For years I've dreamt about creating one of those crazy personal websites, with a beautiful design, animations everywhere and some easter eggs. This was probably due to my work as a front-end developer, but these days I'm more of a back-end developer and my personal tastes in development have evolved, just like my expectations for the perfect website.
