--- a/content/posts/2020-08-06-mocking-exception/post.mdx
+++ b/content/posts/2020-08-06-mocking-exception/post.mdx
@@ -2,7 +2,7 @@
 title: "Mocking an exception in PHP"
 date: "2020-08-06"
 slug: mocking-an-exception-in-php
-featuredImage: images/featured.jpg # https://unsplash.com/photos/KmKZV8pso-s
+featuredImage: images/featured.webp # https://unsplash.com/photos/KmKZV8pso-s
 ---
 
 When writing tests, you might sometimes need to mock an exception, this is an unusual case but it happened to me one year ago [while overcoming a bug in Symfony's Security component](https://github.com/symfony/symfony/issues/28229#issuecomment-507273572). I needed to know if an exception was thrown by the `Symfony\Component\Security\Http\Firewall\AccessListener` class or not, I did it by writing a code similar to this:
