--- a/content/posts/2020-11-11-scriptable-widget/post.mdx
+++ b/content/posts/2020-11-11-scriptable-widget/post.mdx
@@ -2,7 +2,7 @@
 title: Scriptable widgets are awesome
 date: 2020-11-11
 slug: scriptable-widgets-are-awesome
-featuredImage: images/featured.jpg # https://unsplash.com/photos/aWQsnHaITD8
+featuredImage: images/featured.webp # https://unsplash.com/photos/aWQsnHaITD8
 socialImageCrop: EAST
 ---
 
