--- a/content/posts/2017-03-06-electron-heroku/post.mdx
+++ b/content/posts/2017-03-06-electron-heroku/post.mdx
@@ -2,7 +2,7 @@
 title: "Running Electron on Heroku"
 date: "2017-03-06"
 slug: running-electron-on-heroku
-featuredImage: images/featured.png
+featuredImage: images/featured.webp
 ---
 
 <Warning>
